# cycling-route-planner

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  prompt.txt  pyproject.toml
.claude/agents/: api-server.md  evaluator.md  frontend-dev.md  route-planner.md
backend/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION.md  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  schemas.py
backend/app/routers/: __init__.py  geocode.py  history.py  plan.py  strava.py  weather.py
backend/app/services/: claude.py  strava.py  streaming.py
backend/data/: route_history.db
backend/tests/: __init__.py  test_api.py  test_strava.py
client/: .dockerignore  .env.production  .env.production.example  Dockerfile  README.md  cloudbuild.yaml  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/__tests__/: gpxExport.test.ts  gradientColors.test.ts
client/src/components/: AnalysisPanel.tsx  ElevationChart.tsx  GpxExportButton.tsx  GradientLegend.tsx  GradientPolyline.tsx  PlanForm.tsx  RouteMap.tsx  StravaCallback.tsx  StravaConnect.tsx  WeatherPanel.tsx
client/src/hooks/: useGeocode.ts  usePlan.ts  useStrava.ts
client/src/utils/: gpxExport.ts  gradientColors.ts
eval/: README.md  USAGE.md  __init__.py  bench_api.py  evaluate.py  requirements.txt  test_routes.json
eval/results/: .gitignore
planner/: README.md  __init__.py  analyzer.py  elevation.py  geocode.py  risk_assessor.py  route_generator.py  schemas.py  weather_client.py
planner/tests/: __init__.py  conftest.py  test_analyzer.py  test_elevation.py  test_risk_assessor.py  test_route_generator.py  test_weather_client.py
